--- a/apps/yazi/keymap.toml
+++ b/apps/yazi/keymap.toml
@@ -22,8 +22,9 @@ keymap = [
 	{ on = "<C-u>", run = "arrow -50%",  desc = "Move cursor up half page" },
 	{ on = "<C-d>", run = "arrow 50%",   desc = "Move cursor down half page" },
 	{ on = "<C-b>", run = "arrow -100%", desc = "Move cursor up one page" },
-	{ on = "<C-f>", run = "shell --confirm 'fd --type f --hidden --exclude .git | fzf --preview \"bat --color=always --style=numbers {}\" 2>/dev/tty | xargs -r yazi -f'", desc = "FZF find files" },
-	# { on = "<C-f>", run = "arrow 100%",  desc = "Move cursor down one page" },
+	#{ on = "<C-f>", run = "shell --confirm 'fd --type f --hidden --exclude .git | fzf --preview \"bat --color=always --style=numbers {}\" 2>/dev/tty | xargs -r yazi -f'", desc = "FZF find files" },
+	#{ on = "<C-j>", run = "shell --confirm 'fd --type d --hidden --exclude .git | fzf --preview \"exa --tree --level=2 --color=always {}\" 2>/dev/tty | xargs -r yazi -f'", desc = "FZF find directories" },
+	#{ on = "<C-f>", run = "arrow 100%",  desc = "Move cursor down one page" },
 
 	{ on = "<S-PageUp>",   run = "arrow -50%",  desc = "Move cursor up half page" },
 	{ on = "<S-PageDown>", run = "arrow 50%",   desc = "Move cursor down half page" },
@@ -215,7 +216,7 @@ keymap = [
 	{ on = "<Left>",  run = "move -1", desc = "Move back a character" },
 	{ on = "<Right>", run = "move 1",  desc = "Move forward a character" },
 	{ on = "<C-b>",   run = "move -1", desc = "Move back a character" },
-	{ on = "<C-f>",   run = "move 1",  desc = "Move forward a character" },
+	#{ on = "<C-f>",   run = "move 1",  desc = "Move forward a character" },
 
 	# Word-wise movement
 	{ on = "b",     run = "backward",              desc = "Move back to the start of the current or previous word" },
