--- a/apps/yazi/keymap.toml
+++ b/apps/yazi/keymap.toml
@@ -7,7 +7,8 @@
 keymap = [
 	{ on = "<Esc>", run = "escape",             desc = "Exit visual mode, clear selected, or cancel search" },
 	{ on = "<C-[>", run = "escape",             desc = "Exit visual mode, clear selected, or cancel search" },
-	{ on = "<C-Space>",     run = "quit",               desc = "Exit the process" },
+	{ on = "<C-Space>", run = "quit",           desc = "Exit the process" },
+	{ on = "q",     run = "quit",               desc = "Exit the process" },
 	{ on = "Q",     run = "quit --no-cwd-file", desc = "Exit the process without writing cwd-file" },
 	{ on = "<C-c>", run = "close",              desc = "Close the current tab, or quit if it is last tab" },
 	{ on = "<C-z>", run = "suspend",            desc = "Suspend the process" },
