--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -2,20 +2,20 @@ loop-playlist=inf
 # Fullscreen
 fs=yes
 
-hdr-compute-peak=yes
-target-trc=auto
-vf=format=colorlevels=full:colormatrix=auto
-video-output-levels=full
-
-osd-font-size=16
-osd-status-msg="${filename}"
-osd-level=1
-osd-alignment=1
-osd-margin-x=10
-osd-margin-y=10
-osd-font-size=30
-osd-playing-msg="${filename}"
-osd-duration=infinity
+# hdr-compute-peak=yes
+# target-trc=auto
+# vf=format=colorlevels=full:colormatrix=auto
+# video-output-levels=full
+#
+# osd-font-size=16
+# osd-status-msg="${filename}"
+# osd-level=1
+# osd-alignment=1
+# osd-margin-x=10
+# osd-margin-y=10
+# osd-font-size=30
+# osd-playing-msg="${filename}"
+# osd-duration=infinity
 
 # Enable Vapoursynth
 #vf=vapoursynth="~~/scripts/svp.vpy"
@@ -29,38 +29,41 @@ osd-duration=infinity
 #
 # This essentially attempts to interpolate the missing frames by convoluting the video along the temporal axis. The filter
 # used can be controlled using the --tscale setting.
-interpolation=yes
-video-sync=display-resample
-tscale=oversample
+# interpolation=yes
+# video-sync=display-resample
+# tscale=oversample
+#
+# # Always push interpolation to 60fps
+# #fps=60
+# override-display-fps=60
+# hwdec=auto-safe
+#
+# # Motion interpolation settings
+# blend-subtitles=yes
+# temporal-dither=yes
+#
+# # Profile for motion interpolation
+# profile=gpu-hq
+#
+# # Optional: Smoothmotion settings
+# scale=ewa_lanczossharp
+# cscale=ewa_lanczossharp
+# dscale=mitchell
+# scale-antiring=0.7
+# cscale-antiring=0.7
+#
+# # Additional settings for better quality
+# deband=yes
+# deband-iterations=4
+# deband-threshold=35
+# deband-range=16
+# deband-grain=5
 
-# Always push interpolation to 60fps
-#fps=60
-override-display-fps=60
-hwdec=auto-safe
+# # additional smoothness
+# tscale-clamp=0.75
 
-# Motion interpolation settings
-blend-subtitles=yes
-temporal-dither=yes
-
-# Profile for motion interpolation
-profile=gpu-hq
-
-# Optional: Smoothmotion settings
-scale=ewa_lanczossharp
-cscale=ewa_lanczossharp
-dscale=mitchell
-scale-antiring=0.7
-cscale-antiring=0.7
-
-# Additional settings for better quality
-deband=yes
-deband-iterations=4
-deband-threshold=35
-deband-range=16
-deband-grain=5
-
-# additional smoothness
-tscale-clamp=0.75
+# ensure hardware accelerated decoding
+hwdec=videotoolbox
 
 # force starting with centered window
 geometry=50%:50%
