--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1921,7 +1921,9 @@ map		ctrl+shift+tab  send_text normal,application \x1b[9;6u
 map		cmd+s						send_text	all \x13
 # # cmd+o -> alt+o
 # map		cmd+o						send_text all \xf8
-map cmd+j ctrl+j
+
+# CMD+J -> F20
+map cmd+j send_text all \x1b[57373u
 # cmd+o -> ctrl+o
 map		cmd+o						send_text all \x0f
 
