--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1923,7 +1923,8 @@ map		cmd+s						send_text	all \x13
 # map		cmd+o						send_text all \xf8
 
 # CMD+J -> F20
-map cmd+j send_text all \x1b[57373u
+map		cmd+j						f20
+
 # cmd+o -> ctrl+o
 map		cmd+o						send_text all \x0f
 
