--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -93,7 +93,9 @@ force-window=immediate
 
 # Specify high quality video rendering preset (for --vo=gpu only)
 # Can cause performance problems with some drivers and GPUs.
-#profile=gpu-hq
+profile=gpu-hq
+vo=gpu
+gpu-api=metal
 
 # Force video to lock on the display's refresh rate, and change video and audio
 # speed to some degree to ensure synchronous playback - can cause problems
@@ -135,7 +137,7 @@ hwdec=auto
 # cache settings
 #
 # Use a large seekable RAM cache even for local input.
-cache=yes
+#cache=yes
 #
 # Use extra large RAM cache (needs cache=yes to make it useful).
 #demuxer-max-bytes=500M
