--- a/apps/yazi/keymap.toml
+++ b/apps/yazi/keymap.toml
@@ -2,6 +2,11 @@
 # If you encounter any issues, please make an issue at https://github.com/yazi-rs/schemas.
 "$schema" = "https://yazi-rs.github.io/schemas/keymap.json"
 
+[[manager.prepend_keymap]]
+on   = ["}"]
+run  = "plugin --sync first-non-directory"
+desc = "Jumps to the first file"
+
 [manager]
 
 keymap = [
