--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1923,7 +1923,9 @@ map		cmd+s						send_text	all \x13
 # map		cmd+o						send_text all \xf8
 
 # CMD+J -> F20
+map		cmd+k						f10
 map		cmd+j						f20
+map F20 alt+shift+j
 
 # cmd+o -> ctrl+o
 map		cmd+o						send_text all \x0f
