--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -23,7 +23,9 @@ p script-message-to osc show-playlist; show-text "${playlist}" 5000 1
 # V cycle-values osd-msg3 "${path}\n${width}x${height} ${video-bitrate} ${video-codec} @ ${fps}fps\n${file-size}" ""
 / show-text "${metadata/title:}\n${width}x${height} @ ${estimated-vf-fps}fps\n${file-size}\n${video-bitrate:}" 5000 1
 
-# Skip to the next clip with space bar
+# Random clip
+#SPACE script-message-to play-random jump-to-random-file
+SPACE script-binding jump-to-random-file
 
 # Skip to the next clip
 ENTER playlist-next
