--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -83,7 +83,7 @@ autofit-larger=90%x90%
 #  different from the --force-window default window size). This can be a problem if initialization doesn't work perfectly,
 #  such as when opening URLs with bad network connection, or opening broken video files. The immediate mode can be used to
 #  create the window always on program start, but this may cause other issues.
-force-window=immediate
+# force-window=immediate
 
 # Disable the On Screen Controller (OSC).
 #osc=no
