--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -15,7 +15,8 @@ Meta+s playlist-clear ; loadfiles "${path}/.*" ; playlist-remove "${path}/${file
 Meta+t run /Applications/LosslessCut.app/Contents/MacOS/LosslessCut "%{path}"
 
 # Print Playlist
-p script-message-to osc show-playlist; show-text "${playlist}" 5000 1
+# p script-message-to osc show-playlist; show-text "${playlist}" 5000 1
+p script-binding show-minimal-playlist
 #p playlist-show
 
 # Interpolation toggle
