--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -1,179 +1,96 @@
+# Infinite loop for playlists
 loop-playlist=inf
-# Fullscreen
+
+# Start in fullscreen
 fs=yes
 
-# hdr-compute-peak=yes
-# target-trc=auto
-# vf=format=colorlevels=full:colormatrix=auto
-# video-output-levels=full
-#
-# osd-font-size=16
-# osd-status-msg="${filename}"
-# osd-level=1
-# osd-alignment=1
-# osd-margin-x=10
-# osd-margin-y=10
-# osd-font-size=30
-# osd-playing-msg="${filename}"
-# osd-duration=infinity
-
-# Enable Vapoursynth
-#vf=vapoursynth="~~/scripts/svp.vpy"
-
-# Frame interpolation
-# Reduce stuttering caused by mismatches in the video fps and display refresh rate (also known as judder).
-#
-#		 WARNING:
-#		 	 This requires setting the --video-sync option to one of the display- modes, or it will be silently disabled.  This was
-#		 	 not required before mpv 0.14.0.
-#
-# This essentially attempts to interpolate the missing frames by convoluting the video along the temporal axis. The filter
-# used can be controlled using the --tscale setting.
-# interpolation=yes
-# video-sync=display-resample
-# tscale=oversample
-#
-# # Always push interpolation to 60fps
-# #fps=60
-# override-display-fps=60
-# hwdec=auto-safe
-#
-# # Motion interpolation settings
-# blend-subtitles=yes
-# temporal-dither=yes
-#
-# # Profile for motion interpolation
-# profile=gpu-hq
-#
-# # Optional: Smoothmotion settings
-# scale=ewa_lanczossharp
-# cscale=ewa_lanczossharp
-# dscale=mitchell
-# scale-antiring=0.7
-# cscale-antiring=0.7
-#
-# # Additional settings for better quality
-# deband=yes
-# deband-iterations=4
-# deband-threshold=35
-# deband-range=16
-# deband-grain=5
-
-# # additional smoothness
-# tscale-clamp=0.75
-
-# ensure hardware accelerated decoding
+# Hardware-accelerated decoding via macOS VideoToolbox
 hwdec=videotoolbox
 
-# force starting with centered window
+# Center the player window on screen
 geometry=50%:50%
 
-# don't allow a new window to have a size larger than 90% of the screen size
+# Restrict window size to 90% of screen dimensions
 autofit-larger=90%x90%
 
-# Do not close the window on exit.
-#keep-open=yes
-
-# --force-window=<yes|no|immediate>
-#  Create a video output window even if there is no video. This can be useful when pretending that mpv is a GUI application.
-#  Currently, the window always has the size 960x540, and is subject to --geometry, --autofit, and similar options.
-#
-#  WARNING:
-#  The window is created only after initialization (to make sure default window placement still works if the video size is
-#  different from the --force-window default window size). This can be a problem if initialization doesn't work perfectly,
-#  such as when opening URLs with bad network connection, or opening broken video files. The immediate mode can be used to
-#  create the window always on program start, but this may cause other issues.
-# force-window=immediate
-
-# Disable the On Screen Controller (OSC).
-#osc=no
-
-# Keep the player window on top of all other windows.
-#ontop=yes
-
-# Specify high quality video rendering preset (for --vo=gpu only)
-# Can cause performance problems with some drivers and GPUs.
+# Use high-quality GPU rendering preset
 profile=gpu-hq
 vo=gpu
 gpu-api=metal
 
-# Force video to lock on the display's refresh rate, and change video and audio
-# speed to some degree to ensure synchronous playback - can cause problems
-# with some drivers and desktop environments.
-#video-sync=display-resample
+# Enable hardware decoding fallback
+hwdec
 
-# Enable hardware decoding if available. Often, this does not work with all
-# video outputs, but should work well with default settings on most systems.
-# If performance or energy usage is an issue, forcing the vdpau or vaapi VOs
-# may or may not help.
-hwdec=auto
+# ----------------------
+# On-Screen Display (OSD)
+# ----------------------
 
-##################
-# audio settings #
-##################
+# Font size and alignment
+osd-font="JetBrainsMono Nerd Font Mono"
+osd-font-size=14
+osd-bold=yes
+osd-color="#FFFFFF"               # White text
+osd-scale-by-window=yes
+osd-line-spacing=2 # Adjust space between lines (default is 0)
 
-# Specify default audio device. You can list devices with: --audio-device=help
-# The option takes the device string (the stuff between the '...').
-#audio-device=alsa/default
+osd-on-seek=bar
+#osd-blur=20 # 0-20
 
-# Do not filter audio to keep pitch when changing playback speed.
+osd-border-size=0.5               # Thin outline for text
+osd-border-color="#00000000"      # Semi-transparent black outline
+osd-shadow-offset=0.3               # Minimal shadow for depth
+osd-shadow-color="#000000"      # Soft, transparent black shadow
+osd-margin-x=20                   # Horizontal margin
+osd-margin-y=20                   # Vertical margin
+osd-bar-align-y=0
+osd-bar-align-x=0 # -1 is far left, 0 is centered, 1 is far right
+osd-bar-outline-size=1
+osd-border-size=5
+osd-bar-w=60
+osd-bar-h=2
+
+osd-border-style=background-box # outline-and-shadow|opaque-box|background-box
+osd-back-color="#A0000000" # border behind border-color
+osd-spacing=0.0      # kern
+
+# osd-margin-x=50
+# osd-margin-y=50
+
+
+# Display the filename while playing
+osd-playing-msg="${filename}"
+
+# Status message format (e.g., shows time and playback speed)
+osd-status-msg="Time: ${time-pos} / ${duration} | Speed: ${speed}x"
+
+# Duration for OSD messages
+osd-duration=3000                 # Messages fade out after 3 seconds
+
+# ----------------------
+# AUDIO SETTINGS
+# ----------------------
+
+# Optional: Disable pitch correction when changing playback speed
 #audio-pitch-correction=no
 
-# Output 5.1 audio natively, and upmix/downmix audio with a different format.
-#audio-channels=5.1
-# Disable any automatic remix, _if_ the audio output accepts the audio format.
-# of the currently played file. See caveats mentioned in the manpage.
-# (The default is "auto-safe", see manpage.)
-#audio-channels=auto
+# ----------------------
+# VIDEO SETTINGS
+# ----------------------
 
-##################
-# other settings #
-##################
+# Optional: Lock video sync to display refresh rate for smooth playback
+#video-sync=display-resample
 
-# Pretend to be a web browser. Might fix playback with some streaming sites,
-# but also will break with shoutcast streams.
-#user-agent="Mozilla/5.0"
+# ----------------------
+# OTHER SETTINGS
+# ----------------------
 
-# cache settings
-#
-# Use a large seekable RAM cache even for local input.
+# Force mpv to keep the window open after playback
+#keep-open=yes
+
+# Optional: Enable caching for smoother streaming
 #cache=yes
-#
-# Use extra large RAM cache (needs cache=yes to make it useful).
 #demuxer-max-bytes=500M
 #demuxer-max-back-bytes=100M
-#
-# Disable the behavior that the player will pause if the cache goes below a
-# certain fill size.
-#cache-pause=no
-#
-# Store cache payload on the hard disk instead of in RAM. (This may negatively
-# impact performance unless used for slow input such as network.)
-#cache-dir=~/.cache/
-#cache-on-disk=yes
 
-# Display English subtitles if available.
+# Default English subtitles if available
 #slang=en
-
-# Play Finnish audio if available, fall back to English otherwise.
-#alang=fi,en
-
-# Change subtitle encoding. For Arabic subtitles use 'cp1256'.
-# If the file seems to be valid UTF-8, prefer UTF-8.
-# (You can add '+' in front of the codepage to force it.)
-#sub-codepage=cp1256
-
-# You can also include other configuration files.
-#include=/path/to/the/file/you/want/to/include
-
-############
-# Profiles #
-############
-
-# The options declared as part of profiles override global default settings,
-# but only take effect when the profile is active.
-
-# The following profile can be enabled on the command line with: --profile=eye-cancer
-
-#[eye-cancer]
-#sharpen=5
