--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -23,23 +23,37 @@ p script-binding show-minimal-playlist
 # i cycle interpolation
 # V cycle-values osd-msg3 "${path}\n${width}x${height} ${video-bitrate} ${video-codec} @ ${fps}fps\n${file-size}" ""
 / show-text "${metadata/title:}\n${width}x${height} @ ${estimated-vf-fps}fps\n${file-size}\n${video-bitrate:}" 5000 1
+# ? show shortcut help
+
+# toggle subtitles
+s cycle sub
 
 # Random clip
-#SPACE script-message-to play-random jump-to-random-file
 SPACE script-binding jump-to-random-file
+#Shift+J script-binding jump-to-random-file
+Shift+J script-message-to playlist_manager random
+
+l seek 3 exact
+Shift+L seek 10 exact
+Ctrl+l seek 20 exact
+
+h seek -3 exact
+Shift+H seek -10 exact
+Ctrl+h seek -20 exact
 
 # Skip to the next clip
 ENTER playlist-next
 Meta+RIGHT playlist-next
+j playlist-next
 
 # Skip to the previous clip
 Shift+ENTER playlist-prev
 Meta+LEFT playlist-prev
+k playlist-prev
 
 # Reveal the currently playing file in finder
 Meta+r script_binding reveal_in_finder
 Meta+ENTER script_binding reveal_in_finder
-Ctrl+f script_binding reveal_in_finder
 
 Meta+e run "/Applications/LosslessCut.app/Contents/MacOS/LosslessCut" "${path}"
 
