--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -21,6 +21,25 @@ gpu-api=metal
 # Enable hardware decoding fallback
 hwdec
 
+hr-seek=yes  # More precise seeking
+video-sync=audio  # Usually better for short clips
+
+# Faster loading and playback
+demuxer-max-bytes=1000000KiB
+demuxer-readahead-secs=2
+cache=yes
+cache-secs=2
+
+# Quicker navigation between files
+force-window=immediate
+force-seekable=yes
+#keep-open=always
+#reset-on-next-file=all
+
+# Reduce memory usage with many files
+cache-pause=no
+#demuxer-max-back-bytes=10000000
+
 # ----------------------
 # On-Screen Display (OSD)
 # ----------------------
