--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -106,7 +106,7 @@ map kitty_mod+f2 launch --title "kitty.conf overlay" --type=overlay screen -d -R
 # FONTS
 # run: `kitty list-fonts`
 #
-font_family      JetBrainsMono Nerd Font
+font_family      JetBrainsMono Nerd Font Mono
 font_size        14
 # force_ltr no
 # adjust_line_height  0 # use pixels or %, can be negative
