--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -27,7 +27,9 @@ map kitty_mod+j neighboring_window down
 map kitty_mod+k neighboring_window up
 map kitty_mod+h neighboring_window left
 map kitty_mod+l neighboring_window right
-map kitty_mod+enter       new_window_with_cwd
+map kitty_mod+enter new_window_with_cwd
+map kitty_mod+| split_window -v --cwd=current
+map kitty_mod+- split_window -h --cwd=current
 
 # Create new window panes in different directions
 map kitty_mod+w close_window
@@ -1051,7 +1053,7 @@ allow_remote_control yes
 #: from controlling kitty. Reloading the config will not affect this
 #: setting.
 
-# listen_on none
+listen_on unix:/tmp/kitty-socket
 
 #: Tell kitty to listen to the specified unix/tcp socket for remote
 #: control connections. Note that this will apply to all kitty
@@ -1506,7 +1508,7 @@ map kitty_mod+v paste_from_clipboard
 #::  You can open a new window running an arbitrary program, for
 #::  example::
 
-#::      map kitty_mod+y      launch mutt
+map kitty_mod+y      launch yazi
 
 #::  You can open a new window with the current working directory set
 #::  to the working directory of the current window using::
