--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1925,10 +1925,12 @@ map		cmd+s						send_text	all \x13
 # map		cmd+o						send_text all \xf8
 
 # CMD+J -> F20
-map		cmd+k						f10
-map		cmd+j						f20
-map F20 alt+shift+j
-
+# map		cmd+k						f10
+# map		cmd+j						ctrl+j
+# map		cmd+shift+j						f20
+# map F20 alt+shift+j
+#map cmd+shift+y launch yazi --cwd=current
+#map kitty_mod+y launch yazi --cwd=current
 # cmd+o -> ctrl+o
 map		cmd+o						send_text all \x0f
 
