--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1508,7 +1508,7 @@ map kitty_mod+v paste_from_clipboard
 #::  You can open a new window running an arbitrary program, for
 #::  example::
 
-map kitty_mod+y launch yazi --cwd=current
+map kitty_mod+y launch --cwd=current yazi
 
 #::  You can open a new window with the current working directory set
 #::  to the working directory of the current window using::
@@ -1935,6 +1935,6 @@ map		cmd+s						send_text	all \x13
 map		cmd+o						send_text all \x0f
 
 map		cmd+backspace		send_text all \x15
-
+map ctrl+shift+b launch --type=tab btm
 # Theme
 include themes/1984-dark
