--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -795,7 +795,7 @@ tab_bar_margin_height 16.0 5.0
 # magin above and below tab bar (in pts).
 tab_bar_style separator
 # tab bar style: fade, slant, separator, powerline, custom, hidden
-tab_bar_align right
+tab_bar_align left
 # horizontal alignment of tab bar. left, center, right.
 tab_bar_min_tabs 1
 # min tabs before tab bar is shown
