--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -52,6 +52,7 @@ map kitty_mod+r launch --cwd=current open --reveal .
 #map kitty_mod+r shell_command --cwd=current open --reveal .
 #map cmd+w close_window
 
+map ctrl+shift+c combine : toggle_marker text 1 ❯ : copy_to_clipboard
 
 # map kitty_mod+w close_window
 # Create new window panes in different directions
@@ -1509,6 +1510,7 @@ map kitty_mod+v paste_from_clipboard
 #::  example::
 
 map kitty_mod+y launch --cwd=current yazi
+map kitty_mod+shift+s launch media search
 
 #::  You can open a new window with the current working directory set
 #::  to the working directory of the current window using::
