--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -861,7 +861,7 @@ active_tab_foreground   #FF00FF
 active_tab_background   #000
 active_tab_font_style   bold
 inactive_tab_foreground #AAA
-#inactive_tab_background #111
+inactive_tab_background #000
 inactive_tab_font_style normal
 
 #: Tab bar colors and styles
@@ -1941,4 +1941,4 @@ map		cmd+backspace		send_text all \x15
 map ctrl+shift+b launch --type=tab btm
 
 # Theme
-include themes/1984-dark
+# include themes/1984-dark
