--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -14,7 +14,7 @@ geometry=50%:50%
 autofit-larger=90%x90%
 
 # Use high-quality GPU rendering preset
-profile=gpu-hq
+#profile=gpu-hq
 vo=gpu
 gpu-api=metal
 
