--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -27,9 +27,9 @@ map kitty_mod+j neighboring_window down
 map kitty_mod+k neighboring_window up
 map kitty_mod+h neighboring_window left
 map kitty_mod+l neighboring_window right
-#map kitty_mod+enter new_window_with_cwd
-map kitty_mod+| split_window -v --cwd=current
-map kitty_mod+- split_window -h --cwd=current
+# map kitty_mod+enter new_window_with_cwd
+# map kitty_mod+| split_window -v --cwd=current
+# map kitty_mod+- split_window -h --cwd=current
 
 # Create new window panes in different directions
 map kitty_mod+w close_window
@@ -49,6 +49,7 @@ map kitty_mod+[ previous_window
 
 map kitty_mod+w close_window
 map kitty_mod+r launch --cwd=current open --reveal .
+map kitty_mod+enter launch --cwd=current open --reveal .
 #map kitty_mod+r shell_command --cwd=current open --reveal .
 #map cmd+w close_window
 
