--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1942,4 +1942,4 @@ map		cmd+backspace		send_text all \x15
 map ctrl+shift+b launch --type=tab btm
 
 # Theme
-# include themes/1984-dark
+include themes/1984-dark
