--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -1,7 +1,7 @@
 # starship.toml
 
 # Don't print a new line at the start
-add_newline = false
+add_newline = true
 
 # Disable default prefix in the prompt (shows no newlines between sections)
 [character]
