--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -859,15 +859,15 @@ tab_title_template "{title[title.rfind('/')+1:].lower()[:3]}{sup.index}"
 #: tab_title_template.
 
 active_tab_foreground   #FF00FF
-active_tab_background   #000
+active_tab_background   #111
 active_tab_font_style   bold
 inactive_tab_foreground #AAA
-inactive_tab_background #000
+inactive_tab_background #111
 inactive_tab_font_style normal
 
 #: Tab bar colors and styles
 
-# tab_bar_background #111
+tab_bar_background #111
 #: Background color for the tab bar. Defaults to using the terminal
 #: background color.
 
