--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1174,7 +1174,8 @@ shell_integration enabled
 
 # macos_menu_action Maximize Window Command+Up
 # macos_menu_action Split Window Left Command+Left
-# macos_menu_action Split Window Right Command+Right
+#macos_menu_action Split Window Right Command+L
+map Command+shift+j macos_menu_action Split Window Down Command+J
 
 # term xterm-kitty
 #: The value of the TERM environment variable to set. Changing this
@@ -1505,13 +1506,15 @@ map kitty_mod+v paste_from_clipboard
 
 #: New window
 
-# map kitty_mod+enter new_window
 
 #::  You can open a new window running an arbitrary program, for
 #::  example::
 
-map kitty_mod+y launch --cwd=current yazi
-map kitty_mod+shift+s launch media search
+#map kitty_mod+y launch --cwd=current yazi
+#map cmd+y kitten run-shell zsh -ic '_yazi-jump'
+#map kitty_mod+y remote_control launch --type=overlay zsh -ic '_yazi-jump'
+map kitty_mod+shift+s launch "media search"
+map ctrl+space launch --type=overlay zsh -ic '_yazi-jump'
 
 #::  You can open a new window with the current working directory set
 #::  to the working directory of the current window using::
