--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1513,8 +1513,11 @@ map kitty_mod+v paste_from_clipboard
 #map kitty_mod+y launch --cwd=current yazi
 #map cmd+y kitten run-shell zsh -ic '_yazi-jump'
 #map kitty_mod+y remote_control launch --type=overlay zsh -ic '_yazi-jump'
-map kitty_mod+shift+s launch "media search"
-map ctrl+space launch --type=overlay zsh -ic '_yazi-jump'
+map alt+s launch "media search"
+map alt+p launch "media play --shuffle"
+map alt+y launch --type=overlay zsh -ic '_yazi-jump'
+# map ctrl+space launch --type=overlay zsh -ic '_yazi-jump'
+map ctrl+space no_op
 
 #::  You can open a new window with the current working directory set
 #::  to the working directory of the current window using::
