--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -16,7 +16,7 @@ autofit-larger=90%x90%
 # Use high-quality GPU rendering preset
 #profile=gpu-hq
 vo=gpu
-gpu-api=metal
+gpu-api=vulkan
 
 # Enable hardware decoding fallback
 hwdec
@@ -50,7 +50,7 @@ osd-font-size=14
 osd-bold=yes
 osd-color="#FFFFFF"               # White text
 osd-scale-by-window=yes
-osd-line-spacing=2 # Adjust space between lines (default is 0)
+#osd-line-spacing=2 # Adjust space between lines (default is 0)
 
 osd-on-seek=bar
 #osd-blur=20 # 0-20
