--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -9,7 +9,7 @@ r playlist-shuffle ; show-text "Shuffled ${playlist-count} items" 1000 1
 #Meta+d show-text "${directory}"
 #Meta+d playlist-clear; loadfile "%f" replace; loadfile "%f" append-play
 Meta+d script-binding replace-playlist
-Meta+s playlist-clear ; loadfiles "${path}/.*" ; playlist-remove "${path}/${filename}" ; show-text "Playing ${path:name} (${playlist-count} clips)"
+#Meta+s playlist-clear ; loadfiles "${path}/.*" ; playlist-remove "${path}/${filename}" ; show-text "Playing ${path:name} (${playlist-count} clips)"
 
 # Edit with losslesscut
 Meta+t run /Applications/LosslessCut.app/Contents/MacOS/LosslessCut "%{path}"
@@ -29,7 +29,7 @@ p script-binding show-minimal-playlist
 s cycle sub
 
 # Random clip
-SPACE script-binding jump-to-random-file
+SHIFT+Enter script-binding jump-to-random-file
 #Shift+J script-binding jump-to-random-file
 Shift+J script-message-to playlist_manager random
 
