--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -2,7 +2,10 @@
 loop-playlist=inf
 
 # Start in fullscreen
-fs=yes
+fullscreen
+script-opts=osc-windowcontrols=no
+no-border
+autofit=100%
 
 # Hardware-accelerated decoding via macOS VideoToolbox
 hwdec=videotoolbox
@@ -16,7 +19,7 @@ autofit-larger=90%x90%
 # Use high-quality GPU rendering preset
 #profile=gpu-hq
 vo=gpu
-gpu-api=vulkan
+#gpu-api=vulkan
 
 # Enable hardware decoding fallback
 hwdec
@@ -33,8 +36,8 @@ cache-secs=2
 # Quicker navigation between files
 force-window=immediate
 force-seekable=yes
-#keep-open=always
-#reset-on-next-file=all
+keep-open=always
+reset-on-next-file=all
 
 # Reduce memory usage with many files
 cache-pause=no
@@ -50,7 +53,7 @@ osd-font-size=14
 osd-bold=yes
 osd-color="#FFFFFF"               # White text
 osd-scale-by-window=yes
-#osd-line-spacing=2 # Adjust space between lines (default is 0)
+# osd-line-spacing=2 # Adjust space between lines (default is 0)
 
 osd-on-seek=bar
 #osd-blur=20 # 0-20
