--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -27,7 +27,9 @@ map kitty_mod+j neighboring_window down
 map kitty_mod+k neighboring_window up
 map kitty_mod+h neighboring_window left
 map kitty_mod+l neighboring_window right
-# map kitty_mod+enter new_window_with_cwd
+#map kitty_mod+shift+enter new_window_with_cwd
+map kitty_mod+shift+enter launch --location=split --cwd=current
+
 # map kitty_mod+| split_window -v --cwd=current
 # map kitty_mod+- split_window -h --cwd=current
 
@@ -627,6 +629,9 @@ initial_window_height 400
 #: as number of cells instead of pixels.
 
 # enabled_layouts *
+
+enabled_layouts splits
+layout_strategy alternate
 
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value all means all layouts. The first listed layout
@@ -1468,7 +1473,8 @@ map kitty_mod+v paste_from_clipboard
 #::  For example, the following opens the scrollback buffer in less in
 #::  an overlay window::
 
-#::      map f1 launch --stdin-source=@screen_scrollback --stdin-add-formatting --type=overlay less +G -R
+#map alt+b launch --stdin-source=@screen_scrollback --stdin-add-formatting --type=overlay less +G -R
+map alt+b launch --stdin-source=@last_cmd_output --stdin-add-formatting --type=overlay nvim
 
 #::  For more details on piping screen and buffer contents to external
 #::  programs, see launch.
@@ -1506,6 +1512,7 @@ map kitty_mod+v paste_from_clipboard
 
 #: New window
 
+env PATH=$HOME/.zsh/bin:$PATH
 
 #::  You can open a new window running an arbitrary program, for
 #::  example::
@@ -1513,15 +1520,13 @@ map kitty_mod+v paste_from_clipboard
 #map kitty_mod+y launch --cwd=current yazi
 #map cmd+y kitten run-shell zsh -ic '_yazi-jump'
 #map kitty_mod+y remote_control launch --type=overlay zsh -ic '_yazi-jump'
-map alt+s launch "media search"
+map alt+s launch "$HOME/.zsh/bin/media search"
 map alt+p launch "media play --shuffle"
-map alt+y launch --type=overlay zsh -ic '_yazi-jump'
+map alt+y launch "yazi"
 # map ctrl+space launch --type=overlay zsh -ic '_yazi-jump'
 map ctrl+space no_op
 
-#::  You can open a new window with the current working directory set
-#::  to the working directory of the current window using::
-
+#::  open a new window with the cwd set:
 #::      map ctrl+alt+enter    launch --cwd=current
 
 #::  You can open a new window that is allowed to control kitty via
