--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1025,7 +1025,7 @@ shell zsh
 #: --login and --interactive to ensure that the shell starts in
 #: interactive mode and reads its startup rc files.
 
-editor nvim
+editor .
 #: The terminal editor (such as ``vim`` or ``nano``) to use when
 #: editing the kitty config file or similar tasks.
 
@@ -1947,6 +1947,8 @@ map		cmd+s						send_text	all \x13
 #map kitty_mod+y launch yazi --cwd=current
 # cmd+o -> ctrl+o
 map		cmd+o						send_text all \x0f
+# cmd+j -> alt+j
+map cmd+j send_text all \x1bj
 
 map		cmd+backspace		send_text all \x15
 
