--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -85,20 +85,20 @@ map cmd+shift+g			show_last_command_output
 #map cmd+shift+n launch --cwd=current
 
 # Overlays
-map alt+f1 launch --title "scrollback overlay" --stdin-source=@screen_scrollback --type=overlay most -v
-map alt+f2 launch --title "pianobar overlay" --type=overlay screen -d -RR pianobar pianobar
-map alt+f3 launch --title "reddit overlay" --type=overlay screen -d -RR reddit tuir
-map alt+f4 launch --title "scratch overlay" --type=overlay screen -d -RR scratch nano /tmp/scratch
-
-map alt+f6 launch --title "cwd overlay" --type=overlay --cwd=current
-map alt+f7 launch --title "TODO overlay" --type=overlay screen -d -RR todo nano $HOME/Documents/.notes/to_do
-map kitty_mod+f8 launch --title "debug" --type=overlay cmatrix -ab -C blue -u 2
-map alt+f9 launch --title "w3m overlay" --type=overlay screen -d -RR w3m w3m -B
-map alt+f10 launch --title "htop overlay" --type=overlay screen -d -RR htop htop
-map alt+shift+f10 launch --title "btop overlay" --type=overlay screen -d -RR btop btop
-map alt+f11 launch --title "ssh:gamerboxloc overlay" --type=overlay ssh christopher@gamerboxloc
-map alt+shift+f11 launch --title "ssh:gamerboxint overlay" --type=overlay ssh christopher@gamerboxint
-map alt+f12 launch --title "customizations overlay" --type=overlay most -v $HOME/.config/kitty/personalizations-help
+# map alt+f1 launch --title "scrollback overlay" --stdin-source=@screen_scrollback --type=overlay most -v
+# map alt+f2 launch --title "pianobar overlay" --type=overlay screen -d -RR pianobar pianobar
+# map alt+f3 launch --title "reddit overlay" --type=overlay screen -d -RR reddit tuir
+# map alt+f4 launch --title "scratch overlay" --type=overlay screen -d -RR scratch nano /tmp/scratch
+#
+# map alt+f6 launch --title "cwd overlay" --type=overlay --cwd=current
+# map alt+f7 launch --title "TODO overlay" --type=overlay screen -d -RR todo nano $HOME/Documents/.notes/to_do
+# map kitty_mod+f8 launch --title "debug" --type=overlay cmatrix -ab -C blue -u 2
+# map alt+f9 launch --title "w3m overlay" --type=overlay screen -d -RR w3m w3m -B
+# map alt+f10 launch --title "htop overlay" --type=overlay screen -d -RR htop htop
+# map alt+shift+f10 launch --title "btop overlay" --type=overlay screen -d -RR btop btop
+# map alt+f11 launch --title "ssh:gamerboxloc overlay" --type=overlay ssh christopher@gamerboxloc
+# map alt+shift+f11 launch --title "ssh:gamerboxint overlay" --type=overlay ssh christopher@gamerboxint
+# map alt+f12 launch --title "customizations overlay" --type=overlay most -v $HOME/.config/kitty/personalizations-help
 
 map kitty_mod+f2 launch --title "kitty.conf overlay" --type=overlay screen -d -RR kitty.conf nano $HOME/.config/kitty/kitty.co>
 
@@ -1525,6 +1525,7 @@ map alt+p launch "media play --shuffle"
 map alt+y launch "yazi"
 # map ctrl+space launch --type=overlay zsh -ic '_yazi-jump'
 map ctrl+space no_op
+
 
 #::  open a new window with the cwd set:
 #::      map ctrl+alt+enter    launch --cwd=current
