--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1524,7 +1524,7 @@ map alt+s launch "$HOME/.zsh/bin/media search"
 map alt+p launch "media play --shuffle"
 map alt+y launch "yazi"
 # map ctrl+space launch --type=overlay zsh -ic '_yazi-jump'
-map ctrl+space no_op
+#map ctrl+space no_op
 
 
 #::  open a new window with the cwd set:
