--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -37,7 +37,7 @@ cache-secs=2
 force-window=immediate
 force-seekable=yes
 keep-open=always
-reset-on-next-file=all
+# reset-on-next-file=all
 
 # Reduce memory usage with many files
 cache-pause=no
