--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -52,8 +52,6 @@ map kitty_mod+[ previous_window
 map kitty_mod+w close_window
 map kitty_mod+r launch --cwd=current open --reveal .
 map kitty_mod+enter launch --cwd=current open --reveal .
-#map kitty_mod+r shell_command --cwd=current open --reveal .
-#map cmd+w close_window
 
 map ctrl+shift+c combine : toggle_marker text 1 ❯ : copy_to_clipboard
 
@@ -75,21 +73,21 @@ map ctrl+w>w close_window
 #: Toggle fullscreen
 map super+f toggle_fullscreen
 
-map cmd+shift+n						new_os_window_with_cmd
+map cmd+shift+n			new_os_window_with_cmd
 map alt+n						new_os_window_with_cmd
-map cmd+t						new_tab
-map cmd+shift+t			new_tab_with_cwd
-map cmd+shift+j       new_window_with_cwd
-map cmd+shift+\       new_window_with_cwd
+map cmd+t						new_tab_with_cwd
+map cmd+shift+t			new_tab
+# map cmd+shift+j     new_window_with_cwd
+# map cmd+shift+\     new_window_with_cwd
 map cmd+shift+g			show_last_command_output
-#map cmd+shift+n launch --cwd=current
+# map cmd+shift+n launch --cwd=current
 
 # Overlays
 # map alt+f1 launch --title "scrollback overlay" --stdin-source=@screen_scrollback --type=overlay most -v
 # map alt+f2 launch --title "pianobar overlay" --type=overlay screen -d -RR pianobar pianobar
 # map alt+f3 launch --title "reddit overlay" --type=overlay screen -d -RR reddit tuir
 # map alt+f4 launch --title "scratch overlay" --type=overlay screen -d -RR scratch nano /tmp/scratch
-#
+
 # map alt+f6 launch --title "cwd overlay" --type=overlay --cwd=current
 # map alt+f7 launch --title "TODO overlay" --type=overlay screen -d -RR todo nano $HOME/Documents/.notes/to_do
 # map kitty_mod+f8 launch --title "debug" --type=overlay cmatrix -ab -C blue -u 2
@@ -100,7 +98,7 @@ map cmd+shift+g			show_last_command_output
 # map alt+shift+f11 launch --title "ssh:gamerboxint overlay" --type=overlay ssh christopher@gamerboxint
 # map alt+f12 launch --title "customizations overlay" --type=overlay most -v $HOME/.config/kitty/personalizations-help
 
-map kitty_mod+f2 launch --title "kitty.conf overlay" --type=overlay screen -d -RR kitty.conf nano $HOME/.config/kitty/kitty.co>
+map kitty_mod+f2 launch --title "kitty.conf overlay" --type=overlay screen -d -RR kitty.conf nvim $HOME/.config/kitty/kitty.conf
 
 
 # focus kitty
@@ -358,7 +356,7 @@ detect_urls yes
 #: value of smart will do it when using normal selections, but not
 #: rectangle selections. always will always do it.
 
-# select_by_word_characters @-./_~?&=%+#
+select_by_word_characters @-./_~?&=%+#
 
 #: Characters considered part of a word when double clicking. In
 #: addition to these characters any character that is marked as an
@@ -390,7 +388,7 @@ detect_urls yes
 #: The default shape of the mouse pointer when dragging across text.
 #: Valid values are: arrow, beam and hand
 
-#: Mouse actions \{{{
+#: Mouse actions
 
 #: Mouse buttons can be remapped to perform arbitrary actions. The
 #: syntax for doing so is:
@@ -540,11 +538,7 @@ detect_urls yes
 #::  Requires https://sw.kovidgoyal.net/kitty/shell-integration/ to
 #::  work
 
-#: }}}
-
-#: }}}
-
-#: Performance tuning \{{{
+#: Performance tuning
 
 # repaint_delay 10
 
@@ -573,9 +567,9 @@ detect_urls yes
 #: keyboard repeat rate, you may notice some slight input latency. If
 #: so, set this to no.
 
-#: }}}
+#:
 
-#: Terminal bell \{{{
+#: Terminal bell
 
 # enable_audio_bell yes
 
@@ -627,9 +621,6 @@ initial_window_height 400
 #: configured by initial_window_width/height, in pixels. You can use a
 #: suffix of "c" on the width/height values to have them interpreted
 #: as number of cells instead of pixels.
-
-# enabled_layouts *
-
 enabled_layouts splits
 layout_strategy alternate
 
@@ -646,7 +637,6 @@ layout_strategy alternate
 #: resizing kitty windows in a layout with the keyboard
 #: (start_resizing_window). The cells value is used for horizontal
 #: resizing and the lines value for vertical resizing.
-
 window_border_width 0.0px
 
 #: The width of window borders. Can be either in pixels (px) or pts
@@ -654,7 +644,6 @@ window_border_width 0.0px
 #: based on screen resolution. If not specified the unit is assumed to
 #: be pts. Note that borders are displayed only when more than one
 #: window is visible. They are meant to separate multiple windows.
-
 draw_minimal_borders yes
 
 #: Draw only the minimum borders needed. This means that only the
@@ -662,7 +651,6 @@ draw_minimal_borders yes
 #: the borders that separate the inactive window from a neighbor. Note
 #: that setting a non-zero window margin overrides this and causes all
 #: borders to be drawn.
-
 window_margin_width 0
 
 #: The window margin (in pts) (blank area outside the border). A
@@ -791,7 +779,7 @@ confirm_os_window_close 0
 #: https://sw.kovidgoyal.net/kitty/actions/#close-window-with-
 #: confirmation action.
 
-#: }}}
+#:
 
 #: TAB_BAR
 tab_bar_edge top
@@ -1506,9 +1494,9 @@ map alt+b launch --stdin-source=@last_cmd_output --stdin-add-formatting --type=o
 #::  Requires https://sw.kovidgoyal.net/kitty/shell-integration/ to
 #::  work.
 
-#: }}}
+#:
 
-#: Window management \{{{
+#: Window management
 
 #: New window
 
@@ -1675,9 +1663,9 @@ map alt+y launch "yazi"
 #: the current tab rather than at the end of the tabs list, use::
 
 #:     map ctrl+t new_tab !neighbor [optional cmd to run]
-#: }}}
+#:
 
-#: Layout management \{{{
+#: Layout management
 
 #: Next layout
 
@@ -1699,9 +1687,9 @@ map alt+y launch "yazi"
 #: stack layout::
 
 #:     map ctrl+alt+z toggle_layout stack
-#: }}}
+#:
 
-#: Font sizes \{{{
+#: Font sizes
 
 #: You can change the font size for all top-level kitty OS windows at
 #: a time or only the current one.
@@ -1736,9 +1724,9 @@ map alt+y launch "yazi"
 #: size::
 
 #:     map kitty_mod+f6 change_font_size current 10.0
-#: }}}
+#:
 
-#: Select and act on visible text \{{{
+#: Select and act on visible text
 
 #: Use the hints kitten to select text and either pass it to an
 #: external program or insert it into the terminal or copy it to the
@@ -1950,10 +1938,12 @@ map		cmd+s						send_text	all \x13
 map		cmd+o						send_text all \x0f
 # cmd+j -> alt+j
 map cmd+j send_text all \x1bj
+map cmd+l send_text all \x1bl
 
 map		cmd+backspace		send_text all \x15
 
-map ctrl+shift+b launch --type=tab btm
+map cmd+shift+b launch --type=tab btm
+map cmd+shift+y launch --type=tab yazi
 
 # Theme
 include themes/1984-dark
